[Nav] Composition over inheritance 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -527,6 +527,8 @@ sidebar-clean:
         url: /clean/dictionary/kodi/
       - title: "Provisioning Profile"
         url: /clean/dictionary/provisioning-profiles/
+      - title: "Composition over inheritance"
+        url: /clean/dictionary/composition-over-inheritance/
       
       
 ##############
