--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -651,6 +651,8 @@ sidebar-it:
         url: /it/apple-tv/apple-tv-4k/
       - title: "[Apple TV 4K] 6세대 kodi 설치 성공 후기"
         url: /it/apple-tv/apple-tv-4k-kodi/
+      - title: "[Apple TV] 한국 출시"
+        url: /it/apple-tv/apple-tv-korea/
   - title: "Nintendo Switch"
     url: /it/nintendo-switch/
     children:
