[Fix] 댓글 오류 테스트

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ comments:
     colorscheme          : # "light" (default), "dark"
   utterances:
     theme                : "github-dark"# "github-light" (default), "github-dark"
-    issue_term           : "swift-man/swift-man.github.io"
+    issue_term           : "pathname"
   giscus:
     repo_id              : # Shown during giscus setup at https://giscus.app
     category_name        : # Full text name of the category
