[Nav] Locale 링크 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -598,6 +598,11 @@ sidebar-swift:
         url: /swift/stringprotocol/compare/
       - title: "applyingTransform(_:reverse:)"
         url: /swift/stringprotocol/applyingtransform/
+  - title: "Locale"
+    url: /swift/locale/
+    children:
+      - title: "사용자의 날짜 및 시간 가져오기"
+        url: /swift/locale/is24hour/
   - title: "Closure"
     url: /swift/closure/
     children:
