--- a/_config.yml
+++ b/_config.yml
@@ -110,21 +110,25 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
-    - label: "Youtube"
-      icon: "fab fa-fw fa-youtube-square"
-      url: "https://www.youtube.com/channel/UClFZ-sHYVl2kgR-2o2E2mPQ"
+    
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/swift-man"
+    - label: "Youtube"
+      icon: "fab fa-fw fa-youtube-square"
+      url: "https://www.youtube.com/c/kimsori"
+    - label: "TikTok"
+      icon: "fab fa-fw fa-tiktok"
+      url: "https://www.tiktok.com/@kim_sol_y"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://www.instagram.com/sol_eeeeeeeeeee/"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:jiniopening@naver.com"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
     - label: ""
       icon: "ad"
       url: "#"
