--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -226,17 +226,20 @@ sidebar-clean:
   - title: "Code"
     url: /clean/code/
     children:
+      - title: "객체 지향적 모델링과 네이밍"
+        url: /clean/code/oop-naming/
       - title: "'코드 리뷰'를 돕는 10가지 방법"
         icon: "fas fa-link"
         url: /clean/code/code-review-10/
-      - title: "객체 지향적 모델링과 네이밍"
-        url: /clean/code/oop-naming/
       - title: "코드 리뷰, 어디까지 해봤니?"
         icon: "fas fa-link"
         url: /clean/code/kakaostory-codereview/
       - title: "Gerrit을 이용한 코드 리뷰 시스템"
         icon: "fas fa-link"
         url: /clean/code/codereview-and-gerrit/
+      - title: "Naming Conventions For iOS Development"
+        icon: "fas fa-link"
+        url: /clean/code/naming-converntions-for-ios-development/
   - title: "English"
     url: /clean/english/
     children:
