--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -579,6 +579,11 @@ sidebar-ios:
     children:
     - title: "Could not find module for target x86_64..."
       url: /ios/build-error/x86_64-apple-ios-simulator/
+  - title: "Fastlane"
+    url: /ios/fastlane/
+    children:
+    - title: "명령어로 앱 버전 올리기"
+      url: /ios/fastlane/fastlane-version-update/
         
     
 #    children:
