--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -427,6 +427,9 @@ sidebar-git:
       - title: "minimal-mistakes"
         icon: "fas fa-link"
         url: https://mmistakes.github.io/minimal-mistakes/
+      - title: "Google Analytics"
+        icon: "fas fa-link"
+        url: https://analytics.google.com/
   
   - title: "Markdown"
     url: /git/markdown/
